--- a/boiler.yaml
+++ b/boiler.yaml
@@ -1,22 +1,24 @@
+substitutions:
+  device: boiler
+  name: "Chaudière Frisquet"
+  reboot_timeout: 14d
+  update_interval: 60s
+  ota_password: "86d8d705bb585eaf7a68c592a025884c"
+
 esphome:
-  name: boiler
+  name: ${device}
   includes:
   - FrisquetBoilerFloatOutput.h
   - HeatCurveClimate.h
-
-substitutions:
-  name: "Chaudière Frisquet"
 
 esp32:
   board: esp32dev
   framework:
     type: arduino
 
-# Enable logging
 logger:
   baud_rate: 0
   level: DEBUG
-  # level: INFO
   logs:
     sensor: INFO
     text_sensor: INFO
@@ -29,13 +31,12 @@ globals:
   - id: global_offset
     type: float
     restore_value: yes
-    initial_value: "17.0"
+    initial_value: "20.0"
   - id: global_kp
     type: float
     restore_value: no
-    initial_value: "3.0"
+    initial_value: "0.0"
 
-# Enable Home Assistant API
 api:
   services:
     - service: set_heating_curve
@@ -63,71 +64,19 @@ api:
             id: global_kp
             value: !lambda 'return kp;'    
 
-ota:
-  password: "86d8d705bb585eaf7a68c592a025884c"
-
-wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-
-  # Enable fallback hotspot (captive portal) in case wifi connection fails
-  ap:
-    ssid: "Boiler Fallback Hotspot"
-    password: "tzTyXUqS2i2e"
-
-captive_portal:
-
-web_server:
-  port: 80
+<<: !include common/wifi.yaml
+<<: !include common/ota.yaml
+<<: !include common/web_server.yaml
+<<: !include common/text_sensors.yaml
+<<: !include common/binary_sensors.yaml
+<<: !include common/switches.yaml
 
 dallas:
   - pin: GPIO26
-    
-switch:
-  - platform: restart
-    name: "${name} reboot"
-
-binary_sensor:
-  - platform: status
-    name: "Statut ${name}" 
-    
-text_sensor:
-  - platform: template
-    name: Uptime Human Readable
-    id: uptime_human
-    icon: mdi:clock-start
-    
+        
 sensor:
-  - platform: uptime
-    name: Uptime Sensor
-    id: uptime_sensor
-    update_interval: 60s
-    on_raw_value:
-      then:
-        - text_sensor.template.publish:
-            id: uptime_human
-            state: !lambda |-
-              int seconds = round(id(uptime_sensor).raw_state);
-              int days = seconds / (24 * 3600);
-              seconds = seconds % (24 * 3600);
-              int hours = seconds / 3600;
-              seconds = seconds % 3600;
-              int minutes = seconds /  60;
-              seconds = seconds % 60;
-              return (
-                (days ? to_string(days) + "d " : "") +
-                (hours ? to_string(hours) + "h " : "") +
-                (minutes ? to_string(minutes) + "m " : "") +
-                (to_string(seconds) + "s")
-              ).c_str();
-
-  - platform: wifi_signal
-    name: "Signal WiFi ${name}"
-    update_interval: 60s
-    unit_of_measurement: dB
-    accuracy_decimals: 0
-    force_update: false
-    icon: mdi:wifi
+  - !include common/sensor/wifi-signal.yaml
+  - !include common/sensor/uptime.yaml
   
   - platform: homeassistant
     id: current_temperature
