--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
-
+# Gitignore settings for ESPHome
+# This is an example and may include too much for your use-case.
+# You can modify this file to suit your needs.
 .DS_Store
+/.esphome/
+/secrets.yaml
+__pycache__
+.pyc
+
