--- a/boiler.yaml
+++ b/boiler.yaml
@@ -16,10 +16,12 @@ esp32:
   framework:
     type: arduino
 
-<<: !include common/common.yaml
-<<: !include common/text_sensors.yaml
-<<: !include common/binary_sensors.yaml
-<<: !include common/switches.yaml  
+packages:
+  common: !include common/common.yaml
+  binary_sensors: !include common/binary_sensors.yaml
+  sensors: !include common/sensors.yaml
+  switches: !include common/switches.yaml
+  text_sensors: !include common/text_sensors.yaml
 
 logger:
   baud_rate: 0
@@ -32,9 +34,6 @@ dallas:
   - pin: GPIO26
     
 sensor:
-  - !include common/sensor/wifi-signal.yaml
-  - !include common/sensor/uptime.yaml
-
   - platform: homeassistant
     id: current_temperature
     entity_id: sensor.aqara_salon_temperature
@@ -88,8 +87,8 @@ climate:
       max_temperature: 25
       temperature_step: 0.5
     control_parameters:
-      heat_factor: 1.8
-      offset: 20
+      heat_factor: 1.6
+      offset: 22
       kp: 0
     output_parameters:
       minimum_output: 0.1
@@ -104,3 +103,13 @@ output:
     max_power: 1.0
     min_power: 0
     zero_means_zero: true
+
+api:
+  services:
+    - service: set_boiler_setpoint
+      variables:
+        setpoint: int
+      then:
+        - output.set_level:
+            id: boiler_cmd
+            level: !lambda 'return setpoint / 100.0;'
