--- a/teleinfo.yaml
+++ b/teleinfo.yaml
@@ -13,10 +13,13 @@ esp32:
   framework:
     type: arduino
 
-<<: !include common/common.yaml
-<<: !include common/logger.yaml
-<<: !include common/binary_sensors.yaml
-<<: !include common/switches.yaml
+packages:
+  common: !include common/common.yaml
+  logger: !include common/logger.yaml
+  binary_sensors: !include common/binary_sensors.yaml
+  sensors: !include common/sensors.yaml
+  switches: !include common/switches.yaml
+  text_sensors: !include common/text_sensors.yaml
 
 uart:
   id: uart_bus
@@ -32,9 +35,6 @@ teleinfo:
   historical_mode: true
 
 sensor:
-  - !include common/sensor/wifi-signal.yaml
-  - !include common/sensor/uptime.yaml
-
   - platform: teleinfo
     tag_name: "BASE"
     name: "Index option Base"
@@ -80,9 +80,6 @@ sensor:
     teleinfo_id: myteleinfo
 
 text_sensor:
-  - !include common/text_sensor/version.yaml
-  - !include common/text_sensor/wifi-info.yaml
-
   - platform: teleinfo
     tag_name: "OPTARIF"
     name: "optarif"
