Add maximum output value to limit boiler power Add minimum heat required power

--- a/common/api.yaml
+++ b/common/api.yaml
@@ -2,3 +2,5 @@
 api:
   reboot_timeout: ${reboot_timeout}
   # password: !secret api_password
+  encryption:
+    key: !secret esphome_encryption_key
