--- a/common/api.yaml
+++ b/common/api.yaml
@@ -1,4 +1,5 @@
 ---
 api:
   reboot_timeout: ${reboot_timeout}
-  # password: !secret api_password
+  encryption:
+    key: !secret api_encryption_key
